# LEAP

./: .dockerignore  .gitignore  ANALYZER_IMPLEMENTATION_PLAN.md  Dockerfile  README.md  TechnicalSpecification.md  docker-compose.yml  pyproject.toml
docs/: ANALYZER_USAGE.md  INDEXER_AND_SEARCH_PLAN.md  INDEXER_SEARCH_USAGE.md  TEST_SEARCH_DESIGN.md
examples/go/: main.go
examples/javascript/: user-service.js
examples/python/: advanced_logging.py  simple_logging.py
examples/ruby/: user_service.rb
leap/: __init__.py  cli.py
leap/analyzer/: __init__.py  analyzer.py  batch_processor.py  config.py  validators.py
leap/analyzer/providers/: __init__.py  anthropic.py  base.py  bedrock.py  lmstudio.py  ollama.py
leap/core/: __init__.py  aggregator.py  discovery.py
leap/indexer/: __init__.py  config.py  indexer.py  language_detector.py  watcher.py
leap/indexer/embeddings/: __init__.py  base.py  sentence_transformers.py
leap/indexer/vector_stores/: __init__.py  base.py  chromadb.py  qdrant.py
leap/parsers/: __init__.py  base.py  go_parser.py  js_parser.py  python_parser.py  ruby_parser.py
leap/parsers/go_parser/: go.mod  go_parser  main.go
leap/parsers/js_parser/: package.json  parser.js
leap/parsers/ruby_parser/: parser.rb
leap/schemas/: __init__.py  log_entry.py
leap/search_server/: __init__.py  config.py  main.py
leap/search_server/api/: __init__.py  models.py
leap/search_server/retrieval/: __init__.py  hybrid_search.py  reranker.py
leap/search_server/ui/templates/: index.html
leap/search_tester/: __init__.py  checkpoint.py  config.py  models.py  outputs.py  ripgrep_fallback.py  search_client.py  tester.py  victoria_client.py
leap/utils/: __init__.py  logger.py
prompts/: analysis_en.txt  analysis_ru.txt
tests/: __init__.py  test_analyzer_config.py  test_analyzer_validators.py  test_core_aggregator.py  test_core_discovery.py  test_go_parser.py  test_indexer_embeddings.py  test_indexer_vector_stores.py  test_js_parser.py  test_parsers_base.py  test_python_parser.py  test_ruby_parser.py  test_search_server_hybrid.py  test_search_tester_checkpoint.py  test_search_tester_clients.py  test_search_tester_config.py  test_search_tester_models.py  test_search_tester_ripgrep.py  test_utils_logger.py
