[project]
name = "leap-cli"
version = "0.1.0"
description = "Log Extraction & Analysis Pipeline - CLI tool for extracting log statements from source code"
authors = [
    {name = "Jemma & Oleg"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["logging", "ast", "parsing", "devops", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.11.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Analyzer dependencies (LLM providers)
analyzer = [
    "anthropic>=0.39.0",  # Anthropic Claude
    "boto3>=1.35.0",      # AWS Bedrock
    "httpx>=0.28.0",      # Ollama & LMStudio
]

# All analyzer providers
all = [
    "anthropic>=0.39.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
leap = "leap.cli:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["leap*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Allow subclassing from Any (for external libs without stubs)
disallow_subclassing_any = false
# Allow untyped decorators (for external libs without stubs)
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["typer", "rich.*", "pydantic", "anthropic", "boto3", "botocore.*", "httpx"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
