[project]
name = "leap-cli"
version = "0.1.0"
description = "Log Extraction & Analysis Pipeline - CLI tool for extracting log statements from source code"
authors = [
    {name = "Jemma & Oleg"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["logging", "ast", "parsing", "devops", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.11.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Analyzer dependencies (LLM providers)
analyzer = [
    "anthropic>=0.39.0",  # Anthropic Claude
    "boto3>=1.35.0",      # AWS Bedrock
    "httpx>=0.28.0",      # Ollama & LMStudio
]

# Indexer dependencies (embeddings & vector stores)
indexer = [
    "sentence-transformers>=3.3.1",  # Embeddings & Re-Ranking
    "torch>=2.6.0",                  # Required by sentence-transformers
    "langdetect>=1.0.9",             # Language detection
    "chromadb>=0.5.23",              # Vector DB (default)
    "qdrant-client>=1.12.1",         # Vector DB (production)
    "watchdog>=6.0.0",               # File watching for auto-reindex
]

# Search Server dependencies (FastAPI & hybrid search)
search = [
    "fastapi>=0.115.6",              # Web framework
    "uvicorn[standard]>=0.34.0",     # ASGI server
    "jinja2>=3.1.5",                 # HTML templates
    "python-multipart>=0.0.20",      # Form data support
    "langchain>=0.3.13",             # Hybrid search framework
    "langchain-community>=0.3.13",   # Community retrievers
    "rank-bm25>=0.2.2",              # BM25 algorithm
]

# All optional dependencies
all = [
    # Analyzer
    "anthropic>=0.39.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    # Indexer
    "sentence-transformers>=3.3.1",
    "torch>=2.6.0",
    "langdetect>=1.0.9",
    "chromadb>=0.5.23",
    "qdrant-client>=1.12.1",
    "watchdog>=6.0.0",
    # Search Server
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "rank-bm25>=0.2.2",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
leap = "leap.cli:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["leap*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Allow subclassing from Any (for external libs without stubs)
disallow_subclassing_any = false
# Allow untyped decorators (for external libs without stubs)
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "typer",
    "rich.*",
    "pydantic",
    "pydantic_core",
    "anthropic",
    "boto3",
    "botocore.*",
    "httpx",
    "sentence_transformers",
    "langdetect",
    "chromadb",
    "chromadb.*",
    "qdrant_client",
    "qdrant_client.*",
    "watchdog",
    "watchdog.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "jinja2",
    "langchain",
    "langchain.*",
    "langchain_community",
    "langchain_community.*",
    "rank_bm25",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
